[package]
name = "rust-osm"
version = "0.1.0"
authors = ["Marvin Dziedzina"]
categories = ["api-bindings", "asynchronous"]
description = "A OSM api crate for editing and fetching OSM data"
edition = "2024"
keywords = ["osm", "api", "editing", "overpass", "OpenStreetMaps"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Marvin-Dziedzina/rust-osm"

[dependencies]
reqwest = { version = "0.12.22" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.141" }
